pr60 code review